--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,16 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "src",
     "outDir": "./dist/out-tsc",
+    "paths": {
+      "@assets/*": ["assets/*"],
+      "@service/*": ["app/services/*"],
+      "@module/*": ["app/modules/*"],
+      "@helper/*": ["app/helper/*"],
+      "@environments/*": ["environments/*"],
+      "@model/*": ["app/models/*"]
+    },
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
@@ -19,10 +27,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
